==> DavidEspert/paparazzi/sw/airborne/arch/chibios/mcu_periph/uart_arch.c <==
#include "mcu_periph/uart_arch.h"
#include "ch.h"
#include "hal.h"

void uart1_init(void)
{
  uart_periph_init(&uart1);
  sdStart(&SD1, &usart1_config);
  uart1.reg_addr = &SD1;
  uart1.init_struct = &uart1_init_struct;

  // Create threads
#if USE_UART1_RX
  uart1_init_struct.rx_mtx = &uart1_rx_mtx;
  uart1_init_struct.rx_sem = &uart1_rx_sem;
  chThdCreateStatic(wa_thd_uart1_rx, sizeof(wa_thd_uart1_rx),
      NORMALPRIO+1, thd_uart1_rx, NULL);
#endif
#if USE_UART1_TX
  uart1_init_struct.tx_mtx = &uart1_tx_mtx;
  uart1_init_struct.tx_sem = &uart1_tx_sem;
  chThdCreateStatic(wa_thd_uart1_tx, sizeof(wa_thd_uart1_tx),
      NORMALPRIO+1, thd_uart1_tx, NULL);
#endif
}

void uart2_init(void)
{
  uart_periph_init(&uart2);
  sdStart(&SD2, &usart2_config);
  uart2.reg_addr = &SD2;
  uart2.init_struct = &uart2_init_struct;

  // Create threads
#if USE_UART2_RX
  uart2_init_struct.rx_mtx = &uart2_rx_mtx;
  uart2_init_struct.rx_sem = &uart2_rx_sem;
  chThdCreateStatic(wa_thd_uart2_rx, sizeof(wa_thd_uart2_rx),
      NORMALPRIO, thd_uart2_rx, NULL);
#endif
#if USE_UART2_TX
  uart2_init_struct.tx_mtx = &uart2_tx_mtx;
  uart2_init_struct.tx_sem = &uart2_tx_sem;
  chThdCreateStatic(wa_thd_uart2_tx, sizeof(wa_thd_uart2_tx),
      NORMALPRIO, thd_uart2_tx, NULL);
#endif
}

void uart3_init(void)
{
  uart_periph_init(&uart3);
  sdStart(&SD3, &usart3_config);
  uart3.reg_addr = &SD3;
  uart3.init_struct = &uart3_init_struct;

  // Create threads
#if USE_UART3_RX
  uart3_init_struct.rx_mtx = &uart3_rx_mtx;
  uart3_init_struct.rx_sem = &uart3_rx_sem;
  chThdCreateStatic(wa_thd_uart3_rx, sizeof(wa_thd_uart3_rx),
      NORMALPRIO, thd_uart3_rx, NULL);
#endif
#if USE_UART3_TX
  uart3_init_struct.tx_mtx = &uart3_tx_mtx;
  uart3_init_struct.tx_sem = &uart3_tx_sem;
  chThdCreateStatic(wa_thd_uart3_tx, sizeof(wa_thd_uart3_tx),
      NORMALPRIO, thd_uart3_tx, NULL);
#endif
}

void uart4_init(void)
{
  uart_periph_init(&uart4);
  sdStart(&SD4, &usart4_config);
  uart4.reg_addr = &SD4;
  uart4.init_struct = &uart4_init_struct;

  // Create threads
#if USE_UART4_RX
  uart4_init_struct.rx_mtx = &uart4_rx_mtx;
  uart4_init_struct.rx_sem = &uart4_rx_sem;
  chThdCreateStatic(wa_thd_uart4_rx, sizeof(wa_thd_uart4_rx),
      NORMALPRIO, thd_uart4_rx, NULL);
#endif
#if USE_UART4_TX
  uart4_init_struct.tx_mtx = &uart4_tx_mtx;
  uart4_init_struct.tx_sem = &uart4_tx_sem;
  chThdCreateStatic(wa_thd_uart4_tx, sizeof(wa_thd_uart4_tx),
      NORMALPRIO, thd_uart4_tx, NULL);
#endif
}

void uart5_init(void)
{
  uart_periph_init(&uart5);
  sdStart(&SD5, &usart5_config);
  uart5.reg_addr = &SD5;
  uart5.init_struct = &uart5_init_struct;

  // Create threads
#if USE_UART5_RX
  uart5_init_struct.rx_mtx = &uart5_rx_mtx;
  uart5_init_struct.rx_sem = &uart5_rx_sem;
  chThdCreateStatic(wa_thd_uart5_rx, sizeof(wa_thd_uart5_rx),
      NORMALPRIO, thd_uart5_rx, NULL);
#endif
#if USE_UART5_TX
  uart5_init_struct.tx_mtx = &uart5_tx_mtx;
  uart5_init_struct.tx_sem = &uart5_tx_sem;
  chThdCreateStatic(wa_thd_uart5_tx, sizeof(wa_thd_uart5_tx),
      NORMALPRIO, thd_uart5_tx, NULL);
#endif
}

void uart6_init(void)
{
  uart_periph_init(&uart6);
  sdStart(&SD6, &usart6_config);
  uart6.reg_addr = &SD6;
  uart6.init_struct = &uart6_init_struct;

  // Create threads
#if USE_UART6_RX
  uart6_init_struct.rx_mtx = &uart6_rx_mtx;
  uart6_init_struct.rx_sem = &uart6_rx_sem;
  chThdCreateStatic(wa_thd_uart6_rx, sizeof(wa_thd_uart6_rx),
      NORMALPRIO, thd_uart6_rx, NULL);
#endif
#if USE_UART6_TX
  uart6_init_struct.tx_mtx = &uart6_tx_mtx;
  uart6_init_struct.tx_sem = &uart6_tx_sem;
  chThdCreateStatic(wa_thd_uart6_tx, sizeof(wa_thd_uart6_tx),
      NORMALPRIO, thd_uart6_tx, NULL);
#endif
}

void uart_put_byte(struct uart_periph *p, long fd, uint8_t data)
{
  struct SerialInit *init_struct = (struct SerialInit*)(p->init_struct);
  if (fd == 0) {
    // if fd is zero, assume the driver is not already locked
    chMtxLock(init_struct->tx_mtx);
    uint16_t temp = (p->tx_insert_idx + 1) % UART_TX_BUFFER_SIZE;
    if (temp == p->tx_extract_idx) {
      chMtxUnlock(init_struct->tx_mtx);
      return;  // no room
    }
    p->tx_buf[p->tx_insert_idx] = data;
    p->tx_insert_idx = temp;

    chMtxUnlock(init_struct->tx_mtx);
    // send signal to start transmission
    chSemSignal (init_struct->tx_sem);
  }
  else {
    // assume driver is locked and available space have been checked
    p->tx_buf[p->tx_insert_idx] = data;
    p->tx_insert_idx = (p->tx_insert_idx + 1) % UART_TX_BUFFER_SIZE;
  }
}
